--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vuedx-typecheck . && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "lib-flexible": "^0.3.2",
     "vant": "^3.0.6",
     "vue": "^3.0.5",
@@ -16,15 +20,35 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
     "@vuedx/typescript-plugin-vue": "^0.6.0",
     "babel-plugin-import": "^1.13.3",
-    "less": "^4.1.1",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.3",
+    "mrm": "^3.0.10",
     "postcss-pxtorem": "^5.1.1",
+    "prettier": "^2.5.1",
     "sass": "^1.32.8",
     "typescript": "^4.1.3",
     "vite": "^2.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue,ts,tsx}": [
+      "yarn lint",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
